find author names via ajax

--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Authors#index</h1>
 <p>Find me in app/views/authors/index.html.erb</p>
+<a href="#" id="foo_link">Foooooo</a>
+<div id="display"></div>
